--- a/psychic/package.json
+++ b/psychic/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
